[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/child2.png" type="Texture" id=1]
[ext_resource path="res://child.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.5
height = 3.0

[sub_resource type="Animation" id=2]
resource_name = "cry"
loop = true
step = 0.125
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 2 ), Vector2( 1, 2 ), Vector2( 2, 2 ), Vector2( 3, 2 ), Vector2( 4, 2 ), Vector2( 5, 2 ), Vector2( 6, 2 ), Vector2( 7, 2 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0 ), Vector2( 0.5, -5 ), Vector2( 0.5, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4, 1 )

[node name="Child" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.5, 0 )
texture = ExtResource( 1 )
hframes = 8
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LookUpDelayTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SadDelayTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/cry = SubResource( 2 )
anims/jump = SubResource( 3 )

[node name="PlayerSensor" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSensor"]
position = Vector2( 0, -4.54651 )
shape = SubResource( 4 )

[connection signal="timeout" from="LookUpDelayTimer" to="." method="_on_LookUpDelayTimer_timeout"]
[connection signal="timeout" from="SadDelayTimer" to="." method="_on_SadDelayTimer_timeout"]
[connection signal="body_entered" from="PlayerSensor" to="." method="_on_PlayerSensor_body_entered"]
